[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/ui/src/UIMain.gd" type="Script" id=1]
[ext_resource path="res://asset/resource/btnRight.tres" type="Texture" id=2]
[ext_resource path="res://asset/font/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://asset/resource/btnLeft.tres" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.140625, 0.140625, 0.140625, 0.745098 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.745098 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=5]
size = 96
font_data = ExtResource( 3 )

[node name="UIMain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LevelContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -406.0
margin_right = 240.0
margin_bottom = -122.0
rect_min_size = Vector2( 480, 48 )
custom_constants/separation = 48

[node name="BtnStart" type="Button" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 51.0
rect_min_size = Vector2( 480, 48 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 2 )
text = "Start"

[node name="BtnExit" type="Button" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 480.0
margin_bottom = 150.0
rect_min_size = Vector2( 480, 48 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 2 )
text = "Exit"

[node name="BtnRight" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -32.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="BtnLeft" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="LbLevel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 48.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 5 )
text = "Level 1"
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnExit" to="." method="_on_BtnExit_pressed"]
[connection signal="pressed" from="BtnRight" to="." method="_on_BtnRight_pressed"]
[connection signal="pressed" from="BtnLeft" to="." method="_on_BtnLeft_pressed"]
